# mfa-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: development.yml  release.yml
src/: config.rs  hmac_sha1.rs  hotp.rs  lib.rs  main.rs  mfa.rs  totp.rs
tests/: cli.rs
tests/cli/: help.toml  show.toml  show.trycmd
tests/cli/profile/: add-help.toml  add.toml  help.toml  list-help.toml  list.toml  remove-help.toml  remove.trycmd
tests/cli/profile/add.out/.mfa-cli/: profile
