[package]
name = "mfa-cli"
version = "0.1.0"
authors = ["tkhr0 <tkhr.karasawa@gmail.com>"]
edition = "2018"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]
readme = "README.md"
repository = "https://github.com/tkhr0/mfa-cli/"
description = "A MFA cli client"
keywords = ["mfa", "cli", "authentication", "config"]

[lib]
name = "mfa_cli"
path = "src/lib.rs"

[[bin]]
name = "mfa-cli"
path = "src/main.rs"

[dependencies]
generic-array = "0.14.1"
hmac = "0.7.1"
sha-1 = "0.8.2"
digest = "0.8.1"
byteorder = "1"
base32 = "0.4.0"
clap = "2.33"
toml = "0.5"
serde = { version = "1.0.0", features = ["derive"] }
