[package]
name = "mfa-cli"
version = "0.2.1"
authors = ["tkhr0 <tkhr.karasawa@gmail.com>"]
edition = "2018"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]
readme = "README.md"
repository = "https://github.com/tkhr0/mfa-cli/"
description = "A MFA cli client"
keywords = ["mfa", "cli", "authentication", "config"]

[lib]
name = "mfa_cli"
path = "src/lib.rs"

[[bin]]
name = "mfa-cli"
path = "src/main.rs"

[dependencies]
hmac = "0.12"
sha-1 = "0.10"
digest = "0.10"
byteorder = "1"
base32 = "0.4.0"
clap = { version = "3", features = ["derive"] }
serde = { version = "1.0.0", features = ["derive"] }
toml = "0.8"
regex = "1"

# testing
tempfile = "3.8"
trycmd = "0.14"
